--- a/01-login.html
+++ b/01-login.html
@@ -50,7 +50,7 @@
 		<figure><img src="images/logo-gimav.png" alt="Logo Gimav"></figure>
 	</div>
 
-	<form action="" id="login">
+	<form action="" id="form-login">
 		<input type="text" placeholder="usuario">
 		<input type="password" placholder="contraseña">
 
@@ -65,7 +65,7 @@
 		</div>
 
 		<button class="boton verde">Acceder</button>
-		<p><a href="02-recuperar-contrasena.html">Olvidé mi contraseña</a></p>
+		<p class="text-center"><a href="02-recuperar-contrasena.html">Olvidé mi contraseña</a></p>
 	</form>
 </section>
 
