--- a/02-recuperar-contrasena.html
+++ b/02-recuperar-contrasena.html
@@ -8,7 +8,7 @@
 <!-- Necesidades básicas de la página
  ================================================== -->
 <meta charset="utf-8">
-<title>Gimav picture - Login</title>
+<title>Recuperar contraseña</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="author" content="">
@@ -44,29 +44,36 @@
 
 </head>
 
-<body id="login">
-<section class="login-container wow fadeIn">
+<body id="recuperar">
+<section class="login-container recuperar wow fadeIn">
 	<div class="logo">
 		<figure><img src="images/logo-gimav.png" alt="Logo Gimav"></figure>
 	</div>
 
+	<h1>Recuperación de<br>contraseña</h1>
+
 	<form action="" id="form-login">
-		<input type="text" placeholder="usuario">
-		<input type="password" placholder="contraseña" class="error">
+		<p class="text-center instrucciones">Por favor ingrese el correo electrónico <br>asociado a su cuenta</p>
+
+		<input type="email" placeholder="usuario">
 
 		<div id="error-usuario" class="error">
 			<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>alert-circle-outline</title><path d="M12,0A12,12,0,1,0,24,12,12,12,0,0,0,12,0" transform="translate(0 0)" fill="#87200f"/><polyline points="11 15 13 15 13 17 11 17 11 15" fill="#c6978f"/><polyline points="11 7 13 7 13 13 11 13 11 7" fill="#c6978f"/></svg>
 			<p>usuario no registrado <br>por favor intente de nuevo</p>
 		</div>
 
-		<div id="error-contrasena" class="error">
-			<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>alert-circle-outline</title><path d="M12,0A12,12,0,1,0,24,12,12,12,0,0,0,12,0" transform="translate(0 0)" fill="#87200f"/><polyline points="11 15 13 15 13 17 11 17 11 15" fill="#c6978f"/><polyline points="11 7 13 7 13 13 11 13 11 7" fill="#c6978f"/></svg>
-			<p>contraseña no válida <br>por favor intente de nuevo</p>
-		</div>
-
-		<button class="boton verde">Acceder</button>
-		<p class="text-center"><a href="02-recuperar-contrasena.html">Olvidé mi contraseña</a></p>
+		<button class="boton verde">Recuperar contraseña</button>
+		<button class="boton azul">Regresar</button>
 	</form>
+
+<!-- Vienen ambas seccione spegadas en la maqueta, una esta comentada apra su visualización -->
+
+<!-- 	<section class="texto-confirmacion">
+		<p>Hemos enviado instrucciones <br>para recuperar tu contraseña <br>a tu dirección de correo electrónico.</p>
+		<p>Accede a tu bandeja de entrada <br>y sigue las instrucciones <br>para reestabler tu acceso a esta app.</p>
+
+		<button class="boton verde">Regresar a Inicio de sesión</button>
+	</section> -->
 </section>
 
 </body>
