Maqueta y estilos mi cuenta

--- a/04-mi-cuenta.html
+++ b/04-mi-cuenta.html
@@ -125,11 +125,66 @@ HEADER
 </header>
 
 <!--
-LOGO
+MI CUENTA
 =============================================================
 -->
-<section id="logo-gimav">
-	<figure><img src="images/logo-gimav-color.png" alt="Logo Gimav"></figure>
+<section id="mi-cuenta" class="text-center">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Mi cuenta</h1>
+
+				<section class="cuenta-datos">
+					<div class="row">
+
+<!-- Nombre -->
+						<div class="col-md-4 text-right">
+							<p class="etiqueta">Nombre</p>
+						</div>
+						<div class="col-md-8">
+							<p class="dato">Gabito el Llaverito</p>
+						</div>
+					</div>
+<!-- Email -->
+					<div class="row">
+						<div class="col-md-4 text-right">
+							<p class="etiqueta">Email</p>
+						</div>
+						<div class="col-md-8">
+							<p class="dato">gabito@elllaverito.com</p>
+						</div>
+					</div>
+
+<!-- Teléfono -->
+					<div class="row">
+						<div class="col-md-4 text-right">
+							<p class="etiqueta">Teléfono</p>
+						</div>
+						<div class="col-md-8">
+							<p class="dato">123-456-789-123</p>
+						</div>
+					</div>
+
+<!-- Imagen -->
+					<div class="row">
+						<div class="col-md-4 text-right">
+							<p class="etiqueta">Imagen de perfil</p>
+						</div>
+						<div class="col-md-8">
+							<figure><img src="images/perfil-genereico.jpg" alt="Imagen de perfil genérico"></figure>
+						</div>
+					</div>
+
+					<div class="row col-md-8 col-md-offset-4">
+						<buton class="boton blanco">Editar información</buton>
+					</div>
+					
+				</section>
+
+				
+			</div>
+		</div>
+	</div>
 </section>
 
 </body>
