Maqueta y estilos editar cuenta

--- a/03-usuario.html
+++ b/03-usuario.html
@@ -8,7 +8,7 @@
 <!-- Necesidades básicas de la página
  ================================================== -->
 <meta charset="utf-8">
-<title>Gimav picture - Login</title>
+<title>Usuario</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="author" content="">
