--- a/04-mi-cuenta.html
+++ b/04-mi-cuenta.html
@@ -8,7 +8,7 @@
 <!-- Necesidades básicas de la página
  ================================================== -->
 <meta charset="utf-8">
-<title>Gimav picture - Login</title>
+<title>Mi cuenta</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="author" content="">
