Maqueta y estilos de administración y modales de administración

--- a/03-usuario.html
+++ b/03-usuario.html
@@ -128,7 +128,7 @@ HEADER
 LOGO
 =============================================================
 -->
-<section id="logo-gimav">
+<section id="logo-gimav" class="wow fadeIn">
 	<figure><img src="images/logo-gimav-color.png" alt="Logo Gimav"></figure>
 </section>
 
