--- a/05-editar-cuenta.html
+++ b/05-editar-cuenta.html
@@ -128,7 +128,7 @@ HEADER
 MI CUENTA
 =============================================================
 -->
-<section id="mi-cuenta" class="text-center">
+<section id="mi-cuenta" class="text-center wow fadeIn">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
@@ -190,11 +190,10 @@ MI CUENTA
 					</section>
 
 					<section class="botones-cont">
-						<buton class="boton rojo">Cancelar</buton>
-						<buton class="boton azul-claro">Guardar cambios</buton>
+						<button class="boton rojo">Cancelar</button>
+						<button class="boton azul-claro">Guardar cambios</button>
 					</section>
 				</form>
-
 				
 			</div>
 		</div>
