Maquetación y estilos tomas

--- a/10-administradores.html
+++ b/10-administradores.html
@@ -148,7 +148,7 @@ ADMINISTRADORES
 						</thead>
 						<tbody>
 							<tr>
-								<td class="admin-nombre">Administrador ejemplo 1</td>
+								<td class="realce">Administrador ejemplo 1</td>
 								<td>emailejemplo@ejemplo.com</td>
 								<td>123-456-789-123</td>
 								<td>DD - MM - AA</td>
@@ -160,7 +160,7 @@ ADMINISTRADORES
 								</td>
 							</tr>
 							<tr>
-								<td class="admin-nombre">Administrador ejemplo 1</td>
+								<td class="realce">Administrador ejemplo 1</td>
 								<td>emailejemplo@ejemplo.com</td>
 								<td>123-456-789-123</td>
 								<td>DD - MM - AA</td>
@@ -172,7 +172,7 @@ ADMINISTRADORES
 								</td>
 							</tr>
 							<tr>
-								<td class="admin-nombre">Administrador ejemplo 1</td>
+								<td class="realce">Administrador ejemplo 1</td>
 								<td>emailejemplo@ejemplo.com</td>
 								<td>123-456-789-123</td>
 								<td>DD - MM - AA</td>
