Maquetación y estilos Staff con modales incluídos

--- a/05-tomas.html
+++ b/05-tomas.html
@@ -8,7 +8,7 @@
 <!-- Necesidades básicas de la página
  ================================================== -->
 <meta charset="utf-8">
-<title>Administradores</title>
+<title>Tomas</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="author" content="">
@@ -87,7 +87,7 @@ HEADER
 						</li>
 
 						<li>
-							<a class="menu-tomas" href="#">Tomas</a>
+							<a class="menu-tomas active" href="#">Tomas</a>
 						</li>
 
 						<li class="menu-usuario">
@@ -133,8 +133,7 @@ ADMINISTRADORES
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>Administradores</h1>
-
+				
 <!--/*********************
 FILTROS
 *********************-->
