Ajustes de resolución e incñusión de imágenes

--- a/02-recuperar-contrasena.html
+++ b/02-recuperar-contrasena.html
@@ -47,7 +47,7 @@
 <body id="recuperar">
 <section class="login-container recuperar wow fadeIn">
 	<div class="logo">
-		<figure><img src="images/logo-gimav.png" alt="Logo Gimav"></figure>
+		<figure><img src="images/logo-gimav.svg" alt="Logo Gimav"></figure>
 	</div>
 
 	<h1>Recuperación de<br>contraseña</h1>
