--- a/01-login.html
+++ b/01-login.html
@@ -47,7 +47,7 @@
 <body id="login">
 <section class="login-container wow fadeIn">
 	<div class="logo">
-		<figure><img src="images/logo-gimav.png" alt="Logo Gimav"></figure>
+		<figure><img src="images/logo-gimav.svg" alt="Logo Gimav"></figure>
 	</div>
 
 	<form action="" id="form-login">
@@ -66,6 +66,8 @@
 
 		<button class="boton verde">Acceder</button>
 		<p class="text-center"><a href="02-recuperar-contrasena.html">Olvidé mi contraseña</a></p>
+
+			<div class="fake-margin"></div>
 	</form>
 </section>
 
