--- a/04-staff.html
+++ b/04-staff.html
@@ -70,7 +70,7 @@ HEADER
 
 <!-- Logo -->
 						<a class="navbar-brand" href="#">
-							<img src="images/logo-gimav.png" alt="Logo">
+							<img src="images/logo-gimav.svg" alt="Logo">
 						</a>
 				    </div>
 			    </div>
@@ -92,26 +92,26 @@ HEADER
 
 						<li class="menu-usuario">
 							<a class="menu-" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8C16.3,8 17,8.7 17,9.5M12,17.23C10.25,17.23 8.71,16.5 7.81,15.42L9.23,14C9.68,14.72 10.75,15.23 12,15.23C13.25,15.23 14.32,14.72 14.77,14L16.19,15.42C15.29,16.5 13.75,17.23 12,17.23Z" /></svg>
+								<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"><title>Sin título-7</title><path d="M25.61,4.39A15,15,0,1,0,30,15,15,15,0,0,0,25.61,4.39ZM9,12.37a1.88,1.88,0,1,1-1.87,1.88A1.87,1.87,0,0,1,9,12.37Zm13.44,8.44a8.07,8.07,0,0,1-14.89,0,0.75,0.75,0,1,1,1.39-.56,6.57,6.57,0,0,0,12.11,0A0.75,0.75,0,0,1,22.44,20.81ZM21,16.12a1.88,1.88,0,1,1,1.88-1.88A1.88,1.88,0,0,1,21,16.12Z" transform="translate(0 0)" fill="#fff"/></svg>
 								<span>Gabito el llaverito</span>
 							</a>
 
 							<ul class="dropdown-menu" aria-labelledby="dLabel">
 								<li>
 									<a href="#">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8C16.3,8 17,8.7 17,9.5M12,17.23C10.25,17.23 8.71,16.5 7.81,15.42L9.23,14C9.68,14.72 10.75,15.23 12,15.23C13.25,15.23 14.32,14.72 14.77,14L16.19,15.42C15.29,16.5 13.75,17.23 12,17.23Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"><title>Sin título-7</title><path d="M25.61,4.39A15,15,0,1,0,30,15,15,15,0,0,0,25.61,4.39ZM9,12.37a1.88,1.88,0,1,1-1.87,1.88A1.87,1.87,0,0,1,9,12.37Zm13.44,8.44a8.07,8.07,0,0,1-14.89,0,0.75,0.75,0,1,1,1.39-.56,6.57,6.57,0,0,0,12.11,0A0.75,0.75,0,0,1,22.44,20.81ZM21,16.12a1.88,1.88,0,1,1,1.88-1.88A1.88,1.88,0,0,1,21,16.12Z" transform="translate(0 0)" fill="#fff"/></svg>
 										<span>Mi cuenta</span>
 									</a>
 								</li>
 								<li>
 									<a href="#">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M22,18V22H18V19H15V16H12L9.74,13.74C9.19,13.91 8.61,14 8,14A6,6 0 0,1 2,8A6,6 0 0,1 8,2A6,6 0 0,1 14,8C14,8.61 13.91,9.19 13.74,9.74L22,18M7,5A2,2 0 0,0 5,7A2,2 0 0,0 7,9A2,2 0 0,0 9,7A2,2 0 0,0 7,5Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="29.64" height="30" viewBox="0 0 29.64 30"><title>Sin título-10</title><path d="M29.51,26.15a0.79,0.79,0,0,0-.23-0.5L17.46,13.84a9,9,0,1,0-4.75,4.75l3.88,3.88a0.81,0.81,0,0,0,.6.24l2.12-.07-0.07,2.12a0.81,0.81,0,0,0,.83.84l2.12-.07-0.08,2.12a0.83,0.83,0,0,0,.24.6,0.78,0.78,0,0,0,.6.24l2.12-.07L25,30.52a0.81,0.81,0,0,0,.25.62,0.81,0.81,0,0,0,.55.22H25.9L29.15,31a0.81,0.81,0,0,0,.72-0.88ZM8.12,9.25a2.55,2.55,0,1,1,0-3.61A2.55,2.55,0,0,1,8.12,9.25Z" transform="translate(-0.24 -1.36)" fill="#fff"/></svg>
 										<span>Administradores</span>
 									</a>
 								</li>
 								<li>
 									<a href="#">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M16.56,5.44L15.11,6.89C16.84,7.94 18,9.83 18,12A6,6 0 0,1 12,18A6,6 0 0,1 6,12C6,9.83 7.16,7.94 8.88,6.88L7.44,5.44C5.36,6.88 4,9.28 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12C20,9.28 18.64,6.88 16.56,5.44M13,3H11V13H13" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="27" height="29.89" viewBox="0 0 27 29.89"><title>Sin título-11</title><path d="M13.56,13.12a1.48,1.48,0,0,1-1.48-1.48V1.48a1.48,1.48,0,0,1,3,0V11.64A1.48,1.48,0,0,1,13.56,13.12Z" transform="translate(-0.06)" fill="#fff"/><path d="M13.56,29.89A13.49,13.49,0,0,1,6.62,4.83,1.48,1.48,0,1,1,8.14,7.36a10.53,10.53,0,1,0,16,9,10.46,10.46,0,0,0-5.12-9,1.48,1.48,0,0,1,1.53-2.54A13.49,13.49,0,0,1,13.56,29.89Z" transform="translate(-0.06)" fill="#fff"/></svg>
 										<span>Cerrar sesión</span>
 									</a>
 								</li>
@@ -151,7 +151,7 @@ FILTROS
 										<option value="">Opción 2</option>
 									</select>
 									<span>
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="11.19" height="16" viewBox="0 0 11.19 16"><title>Sin título-2</title><path d="M9.78,3h0A5.59,5.59,0,0,0,1.87,3h0a6.41,6.41,0,0,0-.52,7.9l4.47,6.46L10.3,10.9A6.41,6.41,0,0,0,9.78,3ZM5.88,8.74A1.85,1.85,0,1,1,7.72,6.9,1.85,1.85,0,0,1,5.88,8.74Z" transform="translate(-0.23 -1.36)" fill="#fff"/></svg>
 									</span>
 								</div>
 							</div>
@@ -166,7 +166,7 @@ FILTROS
 										<option value="">Opción 2</option>
 									</select>
 									<span>
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="18" height="15.91" viewBox="0 0 18 15.91"><title>Sin título-3</title><path d="M17.76,0.33S12.5-.77,10,1.73a1.32,1.32,0,0,1-2,0C5.5-.77.24,0.33,0.24,0.33s-1,4.58.94,7.23v7.85a0.59,0.59,0,0,0,1.19,0V8.69A4.5,4.5,0,0,0,8,8.09a1.32,1.32,0,0,1,2,0,4.5,4.5,0,0,0,6.36,0C18.86,5.59,17.76.33,17.76,0.33ZM4.5,5.92a3.05,3.05,0,0,1-2.27-1,3.06,3.06,0,0,1,4.55,0A3.05,3.05,0,0,1,4.5,5.92Zm9,0a3.05,3.05,0,0,1-2.27-1,3.06,3.06,0,0,1,4.55,0A3.05,3.05,0,0,1,13.5,5.92Z" transform="translate(0 -0.09)" fill="#fff"/></svg>
 									</span>
 								</div>
 							</div>
@@ -181,7 +181,7 @@ FILTROS
 										<option value="">Opción 2</option>
 									</select>
 									<span>
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="13.33" height="16" viewBox="0 0 13.33 16"><title>Sin título-4</title><path d="M13.33,16H0V12.67A3.33,3.33,0,0,1,3.33,9.33H10a3.33,3.33,0,0,1,3.33,3.33V16h0Z" fill="#fff"/><circle cx="6.67" cy="4" r="4" fill="#fff"/></svg>
 									</span>
 								</div>
 							</div>
@@ -230,12 +230,12 @@ LISTA
 								<td>Localidad Ej. 1.1.1</td>
 								<td>
 									<div class="configurar" data-toggle="modal" data-target="#">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M22.7,19L13.6,9.9C14.5,7.6 14,4.9 12.1,3C10.1,1 7.1,0.6 4.7,1.7L9,6L6,9L1.6,4.7C0.4,7.1 0.9,10.1 2.9,12.1C4.8,14 7.5,14.5 9.8,13.6L18.9,22.7C19.3,23.1 19.9,23.1 20.3,22.7L22.6,20.4C23.1,20 23.1,19.3 22.7,19Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="15.04" height="14.92" viewBox="0 0 15.04 14.92"><title>icono-configuracion</title><path d="M2.86,45.6a0.2,0.2,0,0,0-.11.34l1,1a1.22,1.22,0,0,1,0,1.72l-0.62.62a1.22,1.22,0,0,1-1.72,0l-1-1a0.22,0.22,0,0,0-.41.14A3.31,3.31,0,0,0,3.75,52.2,1.4,1.4,0,0,1,5,52.56l7.5,7.5A1.46,1.46,0,0,0,14.57,58h0L7,50.57a1.4,1.4,0,0,1-.4-1.19A3.31,3.31,0,0,0,2.86,45.6Zm10.8,13a0.43,0.43,0,0,1-.61.61L5.42,51.56A0.43,0.43,0,0,1,6,51Z" transform="translate(0.04 -45.57)" fill="#3472b8"/></svg>
 									</div>
 								</td>
 								<td>
 									<div class="borrar-admin" data-toggle="modal" data-target="#modal-eliminar-staff">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" /></svg>	
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="13" height="15" viewBox="0 0 13 15"><title>Sin título-6</title><path d="M12.68,1.43H8.79V0.32A0.32,0.32,0,0,0,8.47,0H4.53a0.32,0.32,0,0,0-.32.32V1.43H0.32A0.32,0.32,0,0,0,0,1.75V3.18a0.32,0.32,0,0,0,.32.32h0.6V14.68a0.32,0.32,0,0,0,.32.32H11.77a0.32,0.32,0,0,0,.32-0.32V3.5h0.6A0.32,0.32,0,0,0,13,3.18V1.75A0.32,0.32,0,0,0,12.68,1.43ZM4.85,0.64h3.3V1.43H4.85V0.64Zm6.6,13.72H1.55V3.5h9.9V14.36Zm0.91-11.5H0.64V2.07H12.36V2.86Z" transform="translate(0)" fill="#c0292e"/><path d="M3.59,12.29A0.32,0.32,0,0,0,3.91,12V5.89a0.32,0.32,0,1,0-.64,0V12A0.31,0.31,0,0,0,3.59,12.29Z" transform="translate(0)" fill="#c0292e"/><path d="M6.5,12.29A0.32,0.32,0,0,0,6.82,12V5.89a0.32,0.32,0,1,0-.64,0V12A0.32,0.32,0,0,0,6.5,12.29Z" transform="translate(0)" fill="#c0292e"/><path d="M9.41,12.29A0.32,0.32,0,0,0,9.73,12V5.89a0.32,0.32,0,1,0-.64,0V12A0.32,0.32,0,0,0,9.41,12.29Z" transform="translate(0)" fill="#c0292e"/></svg>	
 									</div>
 								</td>
 							</tr>
@@ -246,12 +246,12 @@ LISTA
 								<td>Localidad Ej. 1.1.2</td>
 								<td>
 									<div class="configurar" data-toggle="modal" data-target="#">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M22.7,19L13.6,9.9C14.5,7.6 14,4.9 12.1,3C10.1,1 7.1,0.6 4.7,1.7L9,6L6,9L1.6,4.7C0.4,7.1 0.9,10.1 2.9,12.1C4.8,14 7.5,14.5 9.8,13.6L18.9,22.7C19.3,23.1 19.9,23.1 20.3,22.7L22.6,20.4C23.1,20 23.1,19.3 22.7,19Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="15.04" height="14.92" viewBox="0 0 15.04 14.92"><title>icono-configuracion</title><path d="M2.86,45.6a0.2,0.2,0,0,0-.11.34l1,1a1.22,1.22,0,0,1,0,1.72l-0.62.62a1.22,1.22,0,0,1-1.72,0l-1-1a0.22,0.22,0,0,0-.41.14A3.31,3.31,0,0,0,3.75,52.2,1.4,1.4,0,0,1,5,52.56l7.5,7.5A1.46,1.46,0,0,0,14.57,58h0L7,50.57a1.4,1.4,0,0,1-.4-1.19A3.31,3.31,0,0,0,2.86,45.6Zm10.8,13a0.43,0.43,0,0,1-.61.61L5.42,51.56A0.43,0.43,0,0,1,6,51Z" transform="translate(0.04 -45.57)" fill="#3472b8"/></svg>
 									</div>
 								</td>
 								<td>
 									<div class="borrar-admin" data-toggle="modal" data-target="#modal-eliminar-staff">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" /></svg>	
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="13" height="15" viewBox="0 0 13 15"><title>Sin título-6</title><path d="M12.68,1.43H8.79V0.32A0.32,0.32,0,0,0,8.47,0H4.53a0.32,0.32,0,0,0-.32.32V1.43H0.32A0.32,0.32,0,0,0,0,1.75V3.18a0.32,0.32,0,0,0,.32.32h0.6V14.68a0.32,0.32,0,0,0,.32.32H11.77a0.32,0.32,0,0,0,.32-0.32V3.5h0.6A0.32,0.32,0,0,0,13,3.18V1.75A0.32,0.32,0,0,0,12.68,1.43ZM4.85,0.64h3.3V1.43H4.85V0.64Zm6.6,13.72H1.55V3.5h9.9V14.36Zm0.91-11.5H0.64V2.07H12.36V2.86Z" transform="translate(0)" fill="#c0292e"/><path d="M3.59,12.29A0.32,0.32,0,0,0,3.91,12V5.89a0.32,0.32,0,1,0-.64,0V12A0.31,0.31,0,0,0,3.59,12.29Z" transform="translate(0)" fill="#c0292e"/><path d="M6.5,12.29A0.32,0.32,0,0,0,6.82,12V5.89a0.32,0.32,0,1,0-.64,0V12A0.32,0.32,0,0,0,6.5,12.29Z" transform="translate(0)" fill="#c0292e"/><path d="M9.41,12.29A0.32,0.32,0,0,0,9.73,12V5.89a0.32,0.32,0,1,0-.64,0V12A0.32,0.32,0,0,0,9.41,12.29Z" transform="translate(0)" fill="#c0292e"/></svg>	
 									</div>
 								</td>
 							</tr>
@@ -262,12 +262,12 @@ LISTA
 								<td>Localidad Ej. 1.1.3</td>
 								<td>
 									<div class="configurar" data-toggle="modal" data-target="#">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M22.7,19L13.6,9.9C14.5,7.6 14,4.9 12.1,3C10.1,1 7.1,0.6 4.7,1.7L9,6L6,9L1.6,4.7C0.4,7.1 0.9,10.1 2.9,12.1C4.8,14 7.5,14.5 9.8,13.6L18.9,22.7C19.3,23.1 19.9,23.1 20.3,22.7L22.6,20.4C23.1,20 23.1,19.3 22.7,19Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="15.04" height="14.92" viewBox="0 0 15.04 14.92"><title>icono-configuracion</title><path d="M2.86,45.6a0.2,0.2,0,0,0-.11.34l1,1a1.22,1.22,0,0,1,0,1.72l-0.62.62a1.22,1.22,0,0,1-1.72,0l-1-1a0.22,0.22,0,0,0-.41.14A3.31,3.31,0,0,0,3.75,52.2,1.4,1.4,0,0,1,5,52.56l7.5,7.5A1.46,1.46,0,0,0,14.57,58h0L7,50.57a1.4,1.4,0,0,1-.4-1.19A3.31,3.31,0,0,0,2.86,45.6Zm10.8,13a0.43,0.43,0,0,1-.61.61L5.42,51.56A0.43,0.43,0,0,1,6,51Z" transform="translate(0.04 -45.57)" fill="#3472b8"/></svg>
 									</div>
 								</td>
 								<td>
 									<div class="borrar-admin" data-toggle="modal" data-target="#modal-eliminar-staff">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" /></svg>	
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="13" height="15" viewBox="0 0 13 15"><title>Sin título-6</title><path d="M12.68,1.43H8.79V0.32A0.32,0.32,0,0,0,8.47,0H4.53a0.32,0.32,0,0,0-.32.32V1.43H0.32A0.32,0.32,0,0,0,0,1.75V3.18a0.32,0.32,0,0,0,.32.32h0.6V14.68a0.32,0.32,0,0,0,.32.32H11.77a0.32,0.32,0,0,0,.32-0.32V3.5h0.6A0.32,0.32,0,0,0,13,3.18V1.75A0.32,0.32,0,0,0,12.68,1.43ZM4.85,0.64h3.3V1.43H4.85V0.64Zm6.6,13.72H1.55V3.5h9.9V14.36Zm0.91-11.5H0.64V2.07H12.36V2.86Z" transform="translate(0)" fill="#c0292e"/><path d="M3.59,12.29A0.32,0.32,0,0,0,3.91,12V5.89a0.32,0.32,0,1,0-.64,0V12A0.31,0.31,0,0,0,3.59,12.29Z" transform="translate(0)" fill="#c0292e"/><path d="M6.5,12.29A0.32,0.32,0,0,0,6.82,12V5.89a0.32,0.32,0,1,0-.64,0V12A0.32,0.32,0,0,0,6.5,12.29Z" transform="translate(0)" fill="#c0292e"/><path d="M9.41,12.29A0.32,0.32,0,0,0,9.73,12V5.89a0.32,0.32,0,1,0-.64,0V12A0.32,0.32,0,0,0,9.41,12.29Z" transform="translate(0)" fill="#c0292e"/></svg>	
 									</div>
 								</td>
 							</tr>
