--- a/08-editar-cuenta.html
+++ b/08-editar-cuenta.html
@@ -69,7 +69,7 @@ HEADER
 
 <!-- Logo -->
 						<a class="navbar-brand" href="#">
-							<img src="images/logo-gimav.png" alt="Logo">
+							<img src="images/logo-gimav.svg" alt="Logo">
 						</a>
 				    </div>
 			    </div>
@@ -91,26 +91,26 @@ HEADER
 
 						<li class="menu-usuario">
 							<a class="menu-" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8C16.3,8 17,8.7 17,9.5M12,17.23C10.25,17.23 8.71,16.5 7.81,15.42L9.23,14C9.68,14.72 10.75,15.23 12,15.23C13.25,15.23 14.32,14.72 14.77,14L16.19,15.42C15.29,16.5 13.75,17.23 12,17.23Z" /></svg>
+								<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"><title>Sin título-7</title><path d="M25.61,4.39A15,15,0,1,0,30,15,15,15,0,0,0,25.61,4.39ZM9,12.37a1.88,1.88,0,1,1-1.87,1.88A1.87,1.87,0,0,1,9,12.37Zm13.44,8.44a8.07,8.07,0,0,1-14.89,0,0.75,0.75,0,1,1,1.39-.56,6.57,6.57,0,0,0,12.11,0A0.75,0.75,0,0,1,22.44,20.81ZM21,16.12a1.88,1.88,0,1,1,1.88-1.88A1.88,1.88,0,0,1,21,16.12Z" transform="translate(0 0)" fill="#fff"/></svg>
 								<span>Gabito el llaverito</span>
 							</a>
 
 							<ul class="dropdown-menu" aria-labelledby="dLabel">
 								<li>
 									<a href="#">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8C16.3,8 17,8.7 17,9.5M12,17.23C10.25,17.23 8.71,16.5 7.81,15.42L9.23,14C9.68,14.72 10.75,15.23 12,15.23C13.25,15.23 14.32,14.72 14.77,14L16.19,15.42C15.29,16.5 13.75,17.23 12,17.23Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"><title>Sin título-7</title><path d="M25.61,4.39A15,15,0,1,0,30,15,15,15,0,0,0,25.61,4.39ZM9,12.37a1.88,1.88,0,1,1-1.87,1.88A1.87,1.87,0,0,1,9,12.37Zm13.44,8.44a8.07,8.07,0,0,1-14.89,0,0.75,0.75,0,1,1,1.39-.56,6.57,6.57,0,0,0,12.11,0A0.75,0.75,0,0,1,22.44,20.81ZM21,16.12a1.88,1.88,0,1,1,1.88-1.88A1.88,1.88,0,0,1,21,16.12Z" transform="translate(0 0)" fill="#fff"/></svg>
 										<span>Mi cuenta</span>
 									</a>
 								</li>
 								<li>
 									<a href="#">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M22,18V22H18V19H15V16H12L9.74,13.74C9.19,13.91 8.61,14 8,14A6,6 0 0,1 2,8A6,6 0 0,1 8,2A6,6 0 0,1 14,8C14,8.61 13.91,9.19 13.74,9.74L22,18M7,5A2,2 0 0,0 5,7A2,2 0 0,0 7,9A2,2 0 0,0 9,7A2,2 0 0,0 7,5Z" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="29.64" height="30" viewBox="0 0 29.64 30"><title>Sin título-10</title><path d="M29.51,26.15a0.79,0.79,0,0,0-.23-0.5L17.46,13.84a9,9,0,1,0-4.75,4.75l3.88,3.88a0.81,0.81,0,0,0,.6.24l2.12-.07-0.07,2.12a0.81,0.81,0,0,0,.83.84l2.12-.07-0.08,2.12a0.83,0.83,0,0,0,.24.6,0.78,0.78,0,0,0,.6.24l2.12-.07L25,30.52a0.81,0.81,0,0,0,.25.62,0.81,0.81,0,0,0,.55.22H25.9L29.15,31a0.81,0.81,0,0,0,.72-0.88ZM8.12,9.25a2.55,2.55,0,1,1,0-3.61A2.55,2.55,0,0,1,8.12,9.25Z" transform="translate(-0.24 -1.36)" fill="#fff"/></svg>
 										<span>Administradores</span>
 									</a>
 								</li>
 								<li>
 									<a href="#">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M16.56,5.44L15.11,6.89C16.84,7.94 18,9.83 18,12A6,6 0 0,1 12,18A6,6 0 0,1 6,12C6,9.83 7.16,7.94 8.88,6.88L7.44,5.44C5.36,6.88 4,9.28 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12C20,9.28 18.64,6.88 16.56,5.44M13,3H11V13H13" /></svg>
+										<svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" width="27" height="29.89" viewBox="0 0 27 29.89"><title>Sin título-11</title><path d="M13.56,13.12a1.48,1.48,0,0,1-1.48-1.48V1.48a1.48,1.48,0,0,1,3,0V11.64A1.48,1.48,0,0,1,13.56,13.12Z" transform="translate(-0.06)" fill="#fff"/><path d="M13.56,29.89A13.49,13.49,0,0,1,6.62,4.83,1.48,1.48,0,1,1,8.14,7.36a10.53,10.53,0,1,0,16,9,10.46,10.46,0,0,0-5.12-9,1.48,1.48,0,0,1,1.53-2.54A13.49,13.49,0,0,1,13.56,29.89Z" transform="translate(-0.06)" fill="#fff"/></svg>
 										<span>Cerrar sesión</span>
 									</a>
 								</li>
@@ -174,7 +174,7 @@ MI CUENTA
 							</div>
 							<div class="col-md-8">
 								<div class="subir-imagen">
-									<figure><img src="images/perfil-genereico.jpg" alt="Imagen de perfil genérico"></figure>
+									<figure><img src="images/icono-perfil.svg" alt="Imagen de perfil genérico"></figure>
 
 									<div class="upload-file">
 										<input type="file" name="file[]" id="file" class="inputfile" data-multiple-caption="{count} files selected" multiple />
